--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: John Doe
-subtitle: Web Developer and Designer
+title: Jieun Lee
+subtitle: Web Developer student
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a Jekyll Theme Built For Developers
 
-url: "https://devlopr.netlify.com" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://jieun-tech.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
