--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ urls:
 
 author_logo: profile.png
 author: Jieun Lee
-author_bio: æ»≥Á«œººø‰ 
+author_bio: Hi
 author_email: "jieun.tech@gmail.com"
-author_location: Korea, Incheon
+author_location: Korea
 author_website_url: "https://jieun-tech.github.io"
 
 author_work_experiences: 
