--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ urls:
 
 author_logo: profile.png
 author: Jieun Lee
-author_bio: ¾È³ç
+author_bio: ì•ˆë…•
 author_email: "jieun.tech@gmail.com"
 author_location: Korea
 author_website_url: "https://jieun-tech.github.io"
