--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 urls:
     - text: Blog
       url: /blog
-    - text: Shop
-      url : /shop/
+#    - text: Shop
+#      url : /shop/
     - text: About Me
-      url: /about/
+      url: /about_me/
     - text: Contact Me
-      url : /contact/
-    - text: Styleguide
-      url: /styleguide/
+      url : /contac_me/
+#    - text: Styleguide
+#      url: /styleguide/
     
 
 # Edit these details 
@@ -75,7 +75,7 @@ github_username:  jieun-tech
 #flickr_username: johndoe
 
 #for comments using disqus
-disqus_shortname: sujay-kundu  
+disqus_shortname: jieun-tech
 
 # wakatime username (coding activity)
 wakatime_username: jieun-tech
